Fix issues with Grid settings becoming invalid when cropping

We should disable aspect ratio locking when the loading the
values from the external sources.

BUG:447588